# axum-ws_mvp

./: Cargo.toml  README.md
axum-ws/: Cargo.toml
axum-ws/src/: callback.rs  channel.rs  connected_socket.rs  lib.rs  socket.rs  utils.rs  websocket.rs
examples/chat/: .gitignore  Cargo.toml  build.rs
examples/chat/assets/: package-lock.json  package.json
examples/chat/assets/js/: user_socket.js
examples/chat/src/: main.rs
