[package]
name = "axum-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
lazy_static = "1.4.0"
nanoid = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
